# yaml2jupyterhub

./: LICENSE  MANIFEST.in  README.md  environment.yaml  setup.cfg  setup.py
yaml2jupyterhub/: helm_install.py  helm_setup.py  jupyterhub_setup.py  k8s_setup.py  k8s_setup_aws.py  main.py  utils.py  yaml2jupyterhub.yaml
yaml2jupyterhub/templates/: jupyterhub.yaml  k8s-cluster-aws.yaml  kube-lego.yaml
yaml2jupyterhub/tests/: test_main.py  test_utils.py
