[flake8]
# Note: there cannot be spaces after comma's here
exclude = __init__.py
max-line-length = 120

[versioneer]
VCS = git
style = pep440
versionfile_source = dask/_version.py
versionfile_build = dask/_version.py
tag_prefix =
parentdir_prefix = dask-

[aliases]
test = pytest

[tool:pytest]
markers:
  network: Test requires an internet connection
  skip_if_np_ge_114: Skip a test when NumPy is older than 1.14
  skip_if_np_lt_114: Skip a test when NumPy is at least 1.14
  slow: Skipped unless --runslow passed
addopts = -rsx --durations=10
filterwarnings =
    # From Cython-1753
    ignore:can't resolve:ImportWarning
    error:::dask[.*]
    error:::pandas[.*]
    error:::numpy[.*]
    error:::distributed[.*]]
xfail_strict=true

[metadata]
license_files = LICENSE.txt
